--- a/SensingEarth_Android/app/src/main/AndroidManifest.xml
+++ b/SensingEarth_Android/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".SocketChannelService"/>
+        <service android:name=".socket.SocketChannelService"/>
 
-        <activity android:name=".ConnectActivity">
+        <activity android:name=".activity.ConnectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,17 +22,17 @@
         </activity>
         
         <activity
-            android:name=".StartActivity"
+            android:name=".activity.StartActivity"
             android:label="@string/app_name">
         </activity>
 
         <activity
-            android:name=".NewConfigurationActivity"
+            android:name=".activity.NewConfigurationActivity"
             android:label="@string/new_configuration_label"
             android:theme="@style/AppTheme">
         </activity>
 
-        <activity android:name=".SensingActivity">
+        <activity android:name=".activity.SensingActivity">
 
         </activity>
     </application>
